-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.0.2
-
None
-
Linux (Fedora)
-
6897dfa16424defeb69850118d5a822cf38d05ed
What follows is from the downstream bug report at https://bugzilla.redhat.com/show_bug.cgi?id=1353510
Description of problem:
During debugging, if an inferior gets a SIGSEGV, the execution cannot be continued, the continue always results in pausing with the same SIGSEGV being reported.
Version-Release number of selected component (if applicable):
qt-creator-4.0.2-1.fc24.x86_64
qt-creator-data-4.0.2-1.fc24.noarch
How reproducible:
always
Steps to Reproduce:
1. make sure you have LO WikiPublisher installed, dnf install libreoffice-wiki-publisher
2. QtCreator: Debug->Attach to running Application, soffice.bin
3. in LO, create new writer document
4. (in case this doesn't yet result in a SIGSEGV, "File->Send->To MediaWiki..."
5. QtCreator stops with "Signal Received: SIGSEGV" - stack shows weird JVM stuff
6. click "continue"
Actual results:
7. goto 5.
Expected results:
the debugger should not break again for the same signal if "continue" is clicked.
Additional info:
it is apparently perfectly normal that JVM startup produces one or two SIGSEGV
so it's very inconvenient if that breaks the debugging experience.
For Gerrit Dashboard: QTCREATORBUG-16565 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
164967,3 | Debugger: Remove 'nopass' on SIGSEGV GDB handler | 4.1 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |