Debugger: Remove 'nopass' on SIGSEGV GDB handler

This has been used since the dawn of time but seems to cause problems
with JVM code.

Task-number: QTCREATORBUG-16565
Change-Id: Iae8a2949671d162f84b9dfe954c8dfbbd743a8de
Reviewed-by: Sandro Mani <manisandro@gmail.com>
Reviewed-by: Orgad Shaneh <orgads@gmail.com>